# secure-my-spot-api

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.prod  Pipfile  README.md  docker-compose-dev.yml  docker-compose.ci.yml  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  doppler.yaml  heroku.yml  heroku_entrypoint.sh  heroku_run_web_script.sh  manage.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  run_start_script.sh  test_script.sh
.github/workflows/: codeql-analysis.yml  deploy.yml  main.yml  test.yml
app/: admin.py  apps.py  serializers.py  urls.py
app/forms/: landing_page_form.py  parking_spot_form.py  user_form.py
app/migrations/: 0001_initial.py  0002_alter_user_email.py  0002_auto_20210918_0251.py  0003_parkingspots.py  0004_auto_20211009_2324.py  0005_rename_parkingspots_parkingspot.py  0006_auto_20211010_1752.py  0007_auto_20211016_2324.py  0008_parkingspot_active.py  0009_reservation.py  0010_reservation_email.py  0011_auto_20211103_1943.py  0012_alter_reservation_email.py  0013_reservation_stripe_payment_intent_id.py  0014_reservation_stripe_setup_intent_id.py  (+1 more)
app/models/: __init__.py  parking_spot.py  (+4 more)
docker/: Dockerfile  Dockerfile.python
hello_django/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: run_dev.sh  run_prod.sh  test_script.sh
secure_my_spot/: __init__.py  asgi.py  celeryconf.py  settings.py  urls.py  wsgi.py
static/: .keep
staticfiles/: staticfiles.json
tasks/: tasks.py
utils/: ErrorClasses.py  payments.py  send_mail.py  utils.py
(+48 files in other folders)
