[tool.poetry]
name = "secure-my-spot-api"
version = "0.1.0"
description = "Backend API for the secure-my-spot project"
authors = ["sven-gerlach <svengerlach@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.7"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
black = "^23.11.0"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.14.0"
pytest = "^7.4.3"
pytest-django = "^4.7.0"
coverage = "^7.3.2"
django-extensions = "^3.2.3"
faker = "^20.1.0"
factory-boy = "^3.3.0"
django-debug-toolbar = "^4.2.0"
django-cors-headers = "^4.3.1"
stripe = "^7.6.0"
celery = "^5.3.6"
redis = "^5.0.1"
model-bakery = "^1.17.0"
python-dateutil = "^2.8.2"
django-redis = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
